spacing fix

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ h2 {
 }
 
 .projects-section h1 {
-    padding-top: 100px;
+    padding-top: 60px;
 }
 
 .projects-section h2 {
